rtpjitterbuffer: pass downstream flowreturn to upstream

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=712722